--- a/上海市国企名录.md
+++ b/上海市国企名录.md
@@ -1,9 +1,9 @@
 
 #### 上海市国企名录
 
-##### 官方网站：
-* 上海市国有资产监督管理委员会 www.shgzw.gov.cn
-* 上海市国资委监管单位分类一览表：www.shgzw.gov.cn/website/html/shgzw/shgzw_xtdw/List/index.htm
+##### 官方网站
+* 上海市国有资产监督管理委员会（www.shgzw.gov.cn）
+* 上海市国资委监管单位分类一览表（www.shgzw.gov.cn/website/html/shgzw/shgzw_xtdw/List/index.htm）
 
 #### 上海市国企名录
 | 序号 |分类 | 企业(集团)名称 | 网址 |
