--- a/国资委央企名录.md
+++ b/国资委央企名录.md
@@ -1,9 +1,9 @@
 
 #### 国资委央企名录
 
-##### 官方网站：
-* 国务院国有资产监督管理委员会：www.sasac.gov.cn
-* 央企名录：www.sasac.gov.cn/n2588035/n2641579/n2641645/index.html
+##### 官方网站
+* 国务院国有资产监督管理委员会（www.sasac.gov.cn）
+* 央企名录（www.sasac.gov.cn/n2588035/n2641579/n2641645/index.html）
 
 ##### 央企名录
 | 序号 | 企业(集团)名称 | 网址 |
