2015面试经历，2016面试经历

--- a/旅游Travel/瑞士旅游签证办理流程.md
+++ b/旅游Travel/瑞士旅游签证办理流程.md
@@ -7,43 +7,43 @@
 
 ###### 基本材料 （必须提交）
 1. 申根签证申请表（原件）
-2. 护照（原件 + 复印件）
-3. 身份证（复印件）
-4. 2寸(3.5cmx4.5cm)白底彩照2张
-5. 医疗保险（原件）
-6. 往返中国的飞机票订单（英文复印件）
-7. 住宿证明（英文复印件）
-8. 行程单（英文复印件）
-9. 申请人的银行储蓄卡进出账单原件（对帐单），须包含最近三个月的流水记录，盖银行章（原件）
-10. 户口本（复印件）
-11. 签证申请/护照领取委托书（原件）
-12. 结婚证（复印件）
-13. 个人信息表（原件）
+2. 个人信息表（原件）
+3. 签证申请/护照领取委托书（原件）
+4. 身份证（复印件）
+5. 护照（原件 + 复印件）
+6. 2寸(3.5cm x 4.5cm)白底彩照2张
+7. 医疗保险（原件）
+8. 往返中国的飞机票订单（英文复印件）
+9. 住宿证明（英文复印件）
+10. 行程单（英文复印件）
+11. 申请人的银行储蓄卡进出账单原件（对帐单），须包含最近三个月的流水记录，盖银行章（原件）
+12. 户口本（复印件）
+13. 结婚证（复印件）
+
 
 ###### 在职人员
-1. 工作单位证明（原件）
+* 工作单位证明（原件）
     * 由雇主出具的证明信(英文) ，需使用公司正式的信头纸并加盖公章，公司负责人亲笔签字，并明确日期及如下信息：任职公司的地址、电话和传真号码；任职公司签字人员的姓名和职务； 申请人姓名、职务、收入和工作年限； 行程目的；公司为申请人保留职位；费用承担方以及准假证明。（加盖公司公章）
-2. 本人所在单位的《营业执照副本》或《组织机构代码证》复印件（加盖公司公章）（原件）
+* 本人所在单位的《营业执照副本》或《组织机构代码证》复印件（加盖公司公章）（原件）
 
 ###### 自由职业者
-1. 解释信 （原件）
+* 解释信 （原件）
     * 请出具以英语书写的解释信，由申请者本人亲笔签字，并明确签字日期及如下信息：申请人姓名，月收入/年收入，描述具体工作内容或工作职责
 
 ###### 在校学生
-1. 学校在读证明（原件 + 翻译件）
-2. 经济依附人的银行储蓄卡进出账单原件（对帐单），须包含最近三个月的流水记录，盖银行章（原件）
-3. 经过中国外交部或中国驻外使馆认证的与经济依附人亲属关系公证书（原件）
+* 学校在读证明（原件 + 翻译件）
+* 经济依附人的银行储蓄卡进出账单原件（对帐单），须包含最近三个月的流水记录，盖银行章（原件）
+* 经过中国外交部或中国驻外使馆认证的与经济依附人亲属关系公证书（原件）
 
 ###### 退休人员
-1. 退休金，养老金或其它固定收入证明（复印件 + 翻译件）
+* 退休金，养老金或其它固定收入证明（复印件 + 翻译件）
     * 标明退休金、养老金或固定收入的退休证或退休证明
     * 银行储蓄卡进出账单原件（对帐单），须包含最近三个月的流水记录，盖银行章（原件）
     * 申请者名下的股票、基金等其他固定收入证明
 
 ###### 学龄前儿童
-1. 经济依附人的银行储蓄卡进出账单原件（对帐单），须包含最近三个月的流水记录，盖银行章（原件）
-2. 经过中国外交部或中国驻外使馆认证的与经济依附人亲属关系公证书 （原件）
-
+* 经济依附人的银行储蓄卡进出账单原件（对帐单），须包含最近三个月的流水记录，盖银行章（原件）
+* 经过中国外交部或中国驻外使馆认证的与经济依附人亲属关系公证书 （原件）
 
 
 
