调整目录，新增多篇日志

--- a/杂七杂八 Others/国务院组织机构.md
+++ b/杂七杂八 Others/国务院组织机构.md
@@ -97,3 +97,124 @@ http://www.gov.cn/guowuyuan/zuzhi.htm
 国家知识产权局（由国家市场监督管理总局管理）
 国家移民管理局加挂中华人民共和国出入境管理局牌子。国家林业和草原局加挂国家公园管理局牌子。国家公务员局在中央组织部加挂牌子，由中央组织部承担相关职责。国家档案局与中央档案馆、国家保密局与中央保密委员会办公室、国家密码管理局与中央密码工作领导小组办公室，一个机构两块牌子，列入中共中央直属机关的下属机构序列。
 ```
+
+
+
+```
+中华人民共和国国务院    
+
+
+     中华人民共和国国务院，即中央人民政府，是最高国家权力机关的执行机关，是最高国家行政机关，由总理、副总理、国务委员、各部部长、各委员会主任、审计长、秘书长组成。国务院实行总理负责制。
+     国务院秘书长在总理领导下，负责处理国务院的日常工作。国务院设立办公厅，由秘书长领导。
+
+
+总 理 1人
+副总理  4人
+国务委员 5人
+秘书长  1人
+
+中华人民共和国国务院办公厅
+
+国务院组成部门
+中华人民共和国外交部
+中华人民共和国国防部
+中华人民共和国国家发展和改革委员会
+中华人民共和国教育部
+中华人民共和国科学技术部
+中华人民共和国工业和信息化部
+中华人民共和国国家民族事务委员会
+中华人民共和国公安部
+中华人民共和国国家安全部
+中华人民共和国监察部
+中华人民共和国民政部
+中华人民共和国司法部
+中华人民共和国财政部
+中华人民共和国人力资源和社会保障部
+中华人民共和国国土资源部
+中华人民共和国环境保护部
+中华人民共和国住房和城乡建设部
+中华人民共和国交通运输部
+中华人民共和国水利部
+中华人民共和国农业部
+中华人民共和国商务部
+中华人民共和国文化部
+中华人民共和国国家卫生和计划生育委员会
+中国人民银行
+中华人民共和国审计署
+（监察部与中共中央纪律检查委员会机关合署办公，机构列入国务院序列，编制列入中共中央直属机构。教育部对外保留国家语言文字工作委员会牌子。工业和信息化部对外保留国家航天局、国家原子能机构牌子。环境保护部对外保留国家核安全局牌子。）
+
+国务院直属特设机构
+国务院国有资产监督管理委员会
+
+国务院直属机构
+中华人民共和国海关总署
+国家税务总局
+国家工商行政管理总局
+国家质量监督检验检疫总局
+国家新闻出版广电总局
+国家体育总局
+国家安全生产监督管理总局
+国家食品药品监督管理总局
+国家统计局
+国家林业局
+国家知识产权局
+国家旅游局
+国家宗教事务局
+国务院参事室
+国家机关事务管理局
+（国家预防腐败局列入国务院直属机构序列，在监察部加挂牌子。国家新闻出版广电总局加挂国家版权局牌子。）
+
+国务院办事机构
+国务院侨务办公室
+国务院港澳事务办公室
+国务院法制办公室
+国务院研究室
+（国务院台湾事务办公室与中共中央台湾工作办公室、国务院新闻办公室与中共中央对外宣传办公室、国务院防范和处理邪教问题办公室与中央防范和处理邪教问题领导小组办公室，一个机构两块牌子，列入中共中央直属机构序列。）
+
+国务院直属事业单位
+新华通讯社
+中国科学院
+中国社会科学院
+中国工程院
+国务院发展研究中心
+国家行政学院
+中国地震局
+中国气象局
+中国银行业监督管理委员会
+中国证券监督管理委员会
+中国保险监督管理委员会
+全国社会保障基金理事会
+国家自然科学基金委员会
+
+国务院部委管理的国家局
+国家信访局
+国家粮食局
+国家能源局
+国家国防科技工业局
+国家烟草专卖局
+国家外国专家局
+国家公务员局
+国家海洋局
+国家测绘地理信息局
+国家铁路局
+中国民用航空局
+国家邮政局
+国家文物局
+国家中医药管理局
+国家外汇管理局
+国家煤矿安全监察局
+（国家档案局与中央档案馆、国家保密局与中央保密委员会办公室、国家密码管理局与中央密码工作领导小组办公室，一个机构两块牌子，列入中共中央直属机关的下属机构序列。）
+
+国务院议事协调机构
+
+地方各级人民政府
+地方各级人民政府是地方各级国家权力机关的执行机关，是地方各级国家行政机关。地方各级人民政府实行省长、市长、县长、区长、乡长、镇长负责制。民族自治地方的自治机关是自治区、自治州、自治县的人民代表大会和人民政府。
+
+省：河北省 山西省 辽宁省 吉林省 黑龙江省 江苏省 浙江省 安徽省 福建省 江西省 山东省 河南省 湖北省 湖南省 广东省 海南省 四川省 贵州省 云南省 陕西省 甘肃省 青海省 台湾省
+
+自治区：内蒙古自治区 广西壮族自治区 西藏自治区  宁夏回族自治区 新疆维吾尔自治区
+
+直辖市：北京市 天津市 上海市 重庆市
+
+特别行政区：香港特别行政区 澳门特别行政区
+```
