我的足迹，世界足球先生

--- a/体育 Sports/历届世界杯（未完成）.md
+++ b/体育 Sports/历届世界杯（未完成）.md
@@ -1,6 +1,8 @@
 
 #### 历届世界杯
 
+国际足联世界杯（FIFA World Cup）
+
 ##### 历届世界杯冠军
 | 届数 | 年份 | 举办地 | 冠军 | 亚军 | 季军 | 殿军 |
 | :-----: | :----: | :----: | :----: | :----: | :----: | :----: |
