--- a/体育 Sports/历届国际足联世界足球先生.md
+++ b/体育 Sports/历届国际足联世界足球先生.md
@@ -1,5 +1,7 @@
 
-#### 历届国际足联世界足球先生（The Best FIFA Men's Player）
+#### 历届国际足联世界足球先生
+
+国际足联世界足球先生（The Best FIFA Men's Player）
 
 | 年度 | 得主 | 国籍 | 获奖时俱乐部 |
 | :-----: | :----: | :----: | :----: |
