新增多篇旧blog

--- a/旅游 Travel/上海湖泊大盘点（未完成）.md
+++ b/旅游 Travel/上海湖泊大盘点（未完成）.md
@@ -37,3 +37,24 @@
 
 
 淀山湖、滴水湖、金山湖、明珠湖、北湖和崇明的东滩湖
+
+
+
+```
+上海湖泊大盘点，原来上海也有湖
+
+1，滴水湖
+     在《爱情公寓》第一部第一集，许多人把这个场景误认为是海南，事实上，取景地是浦东临港滴水湖。这里远离城市的喧嚣，水天一色、人烟稀少。在一号码头可以选择乘坐快艇在水面飞驰、或是在游船上欣赏港城城市美景。这里安静、空气新鲜、景色优美，可以露营、放风筝、钓鱼、玩帆船、坐快艇或者骑自行车环湖游。还可以沿着圆形的湖岸漫步，感受湖风拂面，享受舒适阳光，也是一种满足。环湖一圈八公里，总能找到适合你的风景。
+
+2，银锄湖
+     长风公园是上海“小宁”们童年春游必去的目的地之一。长风公园最初名叫碧罗湖公园，其山水布局参照北京颐和园。颐和园前有昆明湖后有万寿山。长风公园前有银锄湖后有铁臂山。取名银锄、铁臂，是借用毛泽东诗词“天连五岭银锄落，地动山河铁臂摇”，很有气魄。而铁臂山正是挖掘银锄湖时的泥土堆积而成的。公园后改为长风，意为“乘长风破万里浪”。长风公园是免门票的。湖心岛上青枫婀娜，湖畔边柳叶拂水，夕阳西下的时候，整个水面都是波光粼粼的，你可以假装在康河的柔波里泛舟。
+
+3，淀山湖
+     淀山湖是上海最大的天然淡水湖泊，黄浦江的源头，比西湖还要大，有“风吹芦苇倒，湖上渔舟飘，池塘荷花笑”的怡人景象。空气清新，风景很美，水面一望无际。你也可以选择骑淀山湖，此外，淀山湖的周围环绕着享誉盛名的朱家角、上海大观园、东方绿舟、太阳岛等景点。
+
+4，月湖
+     月湖是一座人工湖。被翠绿的东佘山、薛山、凤凰山环抱着，临湖可望见佘山独耸而踞，来到这里，就像一脚踏进了山水画里。围绕着月湖而建的月湖雕塑公园，沿湖错落摆放着六十余件雕塑作品，公园的设计以春夏秋冬四季为主题，将月湖沿岸分割为四季码头水岸，风光各异，特别适合散步。
+
+5，美兰湖
+     美兰湖被誉为“北上海最美丽的地方”，一片广袤迷人的湖泊，就像在北欧般宁静而优雅。这里有集餐饮、购物、休闲的北欧风情街，也有充满娱乐趣味的美兰湖主题公园，此外，高尔夫球场、婚纱摄影基地、各式水上项目散落其间。倚身船舷，任船儿随风摇曳，岸边满目绿树红墙，安徒生笔下的童话也不过如此吧！
+ ```
