--- a/旅游 Travel/上海旅游景点大盘点（未完成）.md
+++ b/旅游 Travel/上海旅游景点大盘点（未完成）.md
@@ -1,2 +1,235 @@
 
 #### 上海旅游景点大盘点
+
+##### 1. 东方明珠
+* 地址：浦东新区世纪大道1号
+* 门票价格：180元
+
+##### 2. 上海金茂大厦88层观光厅
+* 地址：浦东新区世纪大道88号
+* 门票价格：成人120元，儿童60元，学生90元，老人100元
+
+##### 3. 上海环球金融中心观光厅
+* 地址：浦东新区世纪大道100号5楼
+* 门票价格：180元
+
+##### 4. 上海中心大厦上海之巅观光厅
+* 地址：浦东新区银城中路501号
+* 门票价格：180元
+
+##### 5. 上海迪士尼度假区
+地址：浦东新区川沙新镇上海国际旅游度假区
+门票价格：平日370元，高峰日499元
+
+##### 6. 上海野生动物园
+* 地址：浦东新区南六公路178号
+* 门票价格：130元
+
+
+
+
+
+
+```
+上海旅游景点大盘点
+
+
+
+
+上海杜莎夫人蜡像馆
+门票价格：成人190元，老人儿童140元
+地址：黄浦区南京西路2-68号新世界城10楼
+
+东平国家森林公园
+门票价格：70元
+地址：崇明区北沿公路2188号
+
+东方绿舟
+门票价格：100元
+地址：青浦区沪青平公路6888号
+
+上海枫泾古镇
+门票价格：50元
+地址：金山区枫泾镇亭枫公路8588弄18号
+
+上海辰山植物园
+门票价格：60元
+地址：松江区辰花公路3888号
+
+上海欢乐谷
+门票价格：230元
+地址：松江区佘山临湖路888号
+
+上海海湾国家森林公园
+门票价格：80元
+地址：奉贤区随塘河路1677号
+
+上海长风海洋世界
+门票价格：成人180元，儿童120元，老人120元
+地址：普陀区大渡河路451号
+
+上海锦江乐园
+门票价格：60元现价：30元
+地址：闵行区虹梅路201号
+
+上海世纪公园
+门票价格：10元
+地址：浦东新区芳甸路66号
+
+朱家角古镇
+门票价格：成人60元，儿童48元，老人48元
+地址：青浦区西井街84号
+
+上海动物园
+门票价格：40元
+地址：长宁区虹桥路2381号
+
+上海共青森林公园
+门票价格：15元
+地址：杨浦区军工路2000号
+
+上海影视乐园
+门票价格：80元
+地址：松江区车墩北松公路4915号
+
+上海鲜花港
+门票价格：成人50元，儿童25元，老人（60岁以上40元，70岁以上25元）
+地址：浦东新区东海农场振东路2号(近两港大道)
+
+上海方塔园
+门票价格：12元
+地址：松江区松江中山东路235号(近方塔南路)
+
+月湖雕塑公园
+门票价格：100元
+地址：松江区林荫新路1158号
+
+宋庆龄故居纪念馆
+门票价格：20元
+地址：徐汇区淮海中路1843号
+
+上海植物园
+门票价格：15元
+地址：徐汇区龙吴路111号
+
+上海古猗园
+门票价格：12元
+地址：嘉定区古猗园路125弄29-402
+
+上海大观园
+门票价格：成人60元，儿童36元，老人30元
+地址：青浦区金商公路701号
+
+孙桥现代农业开发区
+门票价格：30元
+地址：浦东新区张江孙桥沔北路185号
+
+上海鲁迅故居
+门票价格：8元
+地址：虹口区甜爱路200号
+
+崇明前卫生态村
+门票价格：60元
+地址：崇明区前卫生态村
+
+上海滨江森林公园
+门票价格：20元
+地址：浦东新区高桥镇凌桥高沙滩3号
+
+上海孙中山故居纪念馆
+门票价格：20元现价：10元
+地址：黄浦区香山路7号
+
+上海马陆葡萄公园
+门票价格：30元
+地址：嘉定区马陆镇大治路27号
+
+华亭人家
+门票价格：15元
+地址：嘉定区华亭镇霜竹公路518号
+
+上海东方地质科普馆
+门票价格：成人80元，儿童40元，老人40元
+地址：浦东新区祝桥镇江镇路100号
+
+东方假日田园
+门票价格：30元
+地址：宝山区联杨路3888号
+
+江南三民文化村
+门票价格：成人60元，儿童30元，老人30元
+地址：崇明区林风公路2201号
+
+上海都市菜园
+门票价格：成人45元，儿童30元，老人40元
+地址：奉贤区海湾镇海兴路888号
+
+高家庄生态园
+门票价格：成人60元，儿童30元
+地址：崇明区港西镇港东公路999号
+
+上海南翔景区
+门票价格：40元（联票），30元（檀园）
+地址：嘉定区南翔镇解放街206号
+
+上海吴淞炮台湾湿地公园
+门票价格：10元
+地址：宝山区塘后路206号
+
+上海碧海金沙景区
+门票价格：成人30元，儿童15元
+地址：奉贤区海湾旅游区海涵路6号
+
+上海宝山顾村公园
+门票价格：成人20元，学生10元
+地址：宝山区沪太路4788号
+
+周浦花海
+门票价格：60元
+地址：浦东新区周浦镇界浜村周邓公路406号
+
+上海游龙石文化科普馆
+门票价格：成人80元，老人50元
+地址：浦东新区川沙新镇新春路20号
+
+上海醉白池公园
+门票价格：12元
+地址：松江区人民南路64号
+
+上海宝山国际民间艺术博览馆
+门票价格：成人30元，学生15元
+地址：宝山区沪太路4788号
+
+上海崇明岛荷花博览园
+门票价格：30元
+地址：崇明区绿华镇堡湖路367号
+
+探险者世界
+门票价格：成人138元 学生98元
+地址：上海人民大道221号
+
+世嘉都市乐园
+门票价格：成人190元，儿童120元，学生170元
+地址：中山北路3300号环球港L4018
+
+家家乐梦幻乐园
+门票价格：成人248元，儿童248元，学生248元
+地址：杨浦区安浦路615号B1
+
+新场古镇
+门票价格：18元
+地址：浦东新区海泉街128号
+
+韩湘水博园
+门票价格：成人30元，学生20元
+地址：闵行区江川路3805号
+
+上海金山嘴渔村
+门票价格：成人40元，儿童20元，老人20元
+地址：金山区山阴镇沪杭公路6394号
+
+廊下生态园
+门票价格：20元
+地址：金山区廊下镇漕廊公路9133号
+
+```
