--- a/旅游 Travel/上海的博物馆大盘点（未完成）.md
+++ b/旅游 Travel/上海的博物馆大盘点（未完成）.md
@@ -1,2 +1,95 @@
 
 #### 上海的博物馆大盘点
+
+##### 1. 上海博物馆
+* 地址：上海市黄浦区人民大道201号
+* 门票价格：20元
+
+##### 2. 上海城市规划展示馆
+地址：人民大道100号
+门票价格：成人30元，学生15元，老人15元
+
+##### 3. 上海科技馆
+地址：浦东新区世纪大道2000号
+门票价格：成人60元，学生30元，老人50元
+
+##### 4. 上海海洋水族馆
+门票价格：成人160元，儿童110元，老人90元
+地址：浦东新区世纪大道88号
+
+##### 5. 上海自然博物馆（静安新馆）
+地址：上海市静安区北京西路510号（静安雕塑公园内）
+门票价格：成人30元，学生12元，老人25元
+
+##### 6. 上海自然博物馆（延安东路老馆）
+地址：上海市黄埔区延安东路260号
+
+##### 7. 上海汽车博物馆
+地址：嘉定区博园路7565号
+门票价格：60元
+
+震旦博物馆
+地址：浦东新区富城路99号副楼
+门票价格：60元
+
+航海博物馆
+地址：浦东新区临港新城申港大道197号
+门票价格：50元
+
+上海大自然野生昆虫馆
+地址：浦东新区丰和路1号
+门票价格：成人60元，儿童40元
+
+上海电影博物馆
+地址：徐汇区漕溪北路595号
+门票价格：60元
+
+泰迪之家博物馆
+地址：世博大道1368号世博园四区L2层
+门票价格：成人80元，儿童60元，学生64元
+
+海军上海博物馆
+地址：上海市宝山区吴淞塘后路68号
+
+
+上海公安博物馆
+地址：上海市黄浦区瑞金南路518号
+
+
+上海电信博物馆
+地址：上海黄浦区延安东路34号
+
+
+
+
+上海世博展览馆
+上海历史博物馆
+上海当代艺术博物馆
+中华艺术宫
+上海石库门博物馆
+上海淞沪抗战纪念馆
+上海犹太难民纪念馆
+上海外滩美术馆
+上海多伦现代美术馆
+上海工艺美术博物馆
+上海自然博物馆
+上海大自然野生昆虫馆
+上海汽车博物馆
+上海昆虫博物馆
+上海天文博物馆
+上海海洋水族馆
+
+
+上海城市规划展示馆
+上海烟草博物馆
+上海公安博物馆
+上海铁路博物馆
+上海儿童博物馆
+上海中医药博物馆
+上海邮政博物馆
+上海航天科技展示馆
+上海地震科普馆
+上海银行博物馆
+上海印刷博物馆
+上海隧道博物馆
+上海医史博物馆
