--- a/旅游 Travel/我的足迹.md
+++ b/旅游 Travel/我的足迹.md
@@ -9,7 +9,7 @@
 | 2017年8月 | 日本东京 |
 | 2016年11月 | 广东深圳 |
 | 2015年11月 | 海南三亚 |
-| 2014年10月 | 安徽宣城市绩溪县，徽杭古道 |
+| 2014年10月 | 安徽宣城绩溪县，徽杭古道 |
 | 2013年12月 | 英国伦敦，Ware，牛津，剑桥，爱丁堡，曼彻斯特，温德米尔湖 |
 | 2011年5月 | 广东中山，香港 |
 | 2010年9月 | 福建厦门 |
@@ -19,7 +19,7 @@
 | 2004年10月 | 山西大同 |
 | 2004年5月 | 天津 |
 | 2004年2月 | 北京 |
-| 2000年10月 |福建武夷山  |
+| 2000年10月 | 福建武夷山 |
 
 ##### 上海周边
 浙江：杭州，宁波，舟山，绍兴，
