--- a/盘点与总结/2015年面试经历.md
+++ b/盘点与总结/2015年面试经历.md
@@ -7,7 +7,7 @@
 * 8月7号，开始写简历，通知两个熟悉的猎头我要准备找工作
 * 8月8号，9号周末两天在家抽空写简历，连续两天改到12点半，终于比较满意了
 * 8月11号 到 8月26号 开始疯狂面试，共面试16家公司，最后只收到两个offer
-* 9月8号，因为没有拿到非常满意的offer，只好接受公司的内部调动，去松江本部的游戏支持部平台组，不加工资，只加了1000块松江津贴
+* 9月8号，因为没有拿到非常满意的offer，只好接受公司的内部调动，去松江本部的游戏支持部平台组，不加工资，只加了 1000 块松江津贴
 * 9月11号，签离职确认单，拿离职证明，正式从生活通有限公司离职
 * 9月14号，入职巨人网络游戏支持部平台组
 
@@ -15,7 +15,7 @@
 * 2015.8.11 周二，下午3点，沪江网电话面试
 * 2015.8.11 周二，晚上7点半，微鲸科技面试
 * 2015.8.12 周三，上午10点半，51.com犀牛互动面试
-* 2015.8.12 周三，下午5点半，推荐中欧商学院的猎头来宜山路与我面谈
+* 2015.8.12 周三，下午5点半，推荐中欧商学院的猎头来公司楼下与我面谈
 * 2015.8.13 周四，下午1点，中欧商学院面试
 * 2015.8.14 周五，下午5点半，诺亚财富面试
 * 2015.8.18 周二，上午10点，两鲜面试
