--- a/体育 Sports/历届欧洲冠军杯（未完成）.md
+++ b/体育 Sports/历届欧洲冠军杯（未完成）.md
@@ -6,25 +6,26 @@
 | 赛季 | 冠军 | 决赛比分 | 举办场地 | 城市 | 最佳射手(进球数) |
 | :-----: | :----: | :----: | :----: | :----: | :----: |
 |  |  |  |  |  |  |
-| 1998-99 赛季 | 曼联 | 曼联 2-1 拜仁慕尼黑 | 诺坎普球场 | 西班牙 巴塞罗那 |  |
-| 1999-00 赛季 | 皇家马德里 | 皇家马德里 3-0 巴伦西亚 | 法兰西大球场 | 法国 巴黎 |  |
-|  |  |  |  |  |  |
-|  |  |  |  |  |  |
-|  |  |  |  |  |  |
-| 2004-05 赛季 | 利物浦 | 利物浦 3-3(点球3-2) AC米兰 | 阿塔图克体育场 | 土耳其 伊斯坦布尔 |  |
-| 2005-06 赛季 | 巴塞罗那 | 巴塞罗那 2-1 阿森纳 | 法兰西大球场 | 法国 巴黎 |  |
-| 2006-07 赛季 | AC米兰 | AC米兰 2-1 利物浦 | 雅典奥林匹克体育场 | 希腊 雅典 |  |
-| 2007-08 赛季 | 曼联 | 曼联 1-1(点球6-5) 切尔西 | 卢日尼基体育场 | 俄罗斯 莫斯科 |  |
-| 2008-09 赛季 | 巴塞罗那 | 巴塞罗那 2-0 曼联 | 罗马奥林匹克体育场 | 意大利 罗马 |  |
-| 2009-10 赛季 | 国际米兰 | 国际米兰 2-0 拜仁慕尼黑 | 圣地亚哥·伯纳乌体育场 | 西班牙 马德里 |  |
-| 2010-11 赛季 | 巴塞罗那 | 巴塞罗那 3-1 曼联 | 温布利球场 | 英国 伦敦 |  |
-| 2011-12 赛季 | 切尔西 | 切尔西 1-1(点球4-3) 拜仁慕尼黑 | 安联球场 | 德国 慕尼黑 |  |
-| 2012-13 赛季 | 拜仁慕尼黑 | 拜仁慕尼黑 2-1 多特蒙德 | 温布利球场 | 英国 伦敦 |  |
-| 2013-14 赛季 | 皇家马德里 | 皇家马德里 4-1 马德里竞技 | 光明球场 | 葡萄牙 里斯本 |  |
-| 2014-15 赛季 | 巴塞罗那 | 巴塞罗那 3-1 尤文图斯 | 柏林奥林匹克体育场 | 德国 柏林 |  |
-| 2015-16 赛季 | 皇家马德里 | 皇家马德里 1-1(点球5-3) 马德里竞技 | 圣西罗球场/梅阿查球场 | 意大利 米兰 |  |
-| 2016-17 赛季 | 皇家马德里 | 皇家马德里 4-1 尤文图斯 | 加迪夫千年球场 | 英国 加迪夫 |  |
-| 2017-18 赛季 | 皇家马德里 | 皇家马德里 3-1 利物浦 | NSK奥林匹克体育场 | 乌克兰 基辅 |  |  |
+| 1998-1999 赛季 | 曼联 | 曼联 2-1 拜仁慕尼黑 | 诺坎普球场 | 西班牙 巴塞罗那 |  |
+| 1999-2000 赛季 | 皇家马德里 | 皇家马德里 3-0 巴伦西亚 | 法兰西大球场 | 法国 巴黎 |  |
+| 2000-2001 赛季 | 拜仁慕尼黑 |  |  |  |  |
+| 2001-2002 赛季 | 皇家马德里 |  |  |  |  |
+| 2002-2003 赛季 | AC米兰 |  |  |  |  |
+| 2003-2004 赛季 | 波尔图 |  |  |  |  |
+| 2004-2005 赛季 | 利物浦 | 利物浦 3-3(点球3-2) AC米兰 | 阿塔图克体育场 | 土耳其 伊斯坦布尔 |  |
+| 2005-2006 赛季 | 巴塞罗那 | 巴塞罗那 2-1 阿森纳 | 法兰西大球场 | 法国 巴黎 |  |
+| 2006-2007 赛季 | AC米兰 | AC米兰 2-1 利物浦 | 雅典奥林匹克体育场 | 希腊 雅典 |  |
+| 2007-2008 赛季 | 曼联 | 曼联 1-1(点球6-5) 切尔西 | 卢日尼基体育场 | 俄罗斯 莫斯科 |  |
+| 2008-2009 赛季 | 巴塞罗那 | 巴塞罗那 2-0 曼联 | 罗马奥林匹克体育场 | 意大利 罗马 |  |
+| 2009-2010 赛季 | 国际米兰 | 国际米兰 2-0 拜仁慕尼黑 | 圣地亚哥·伯纳乌体育场 | 西班牙 马德里 |  |
+| 2010-2011 赛季 | 巴塞罗那 | 巴塞罗那 3-1 曼联 | 温布利球场 | 英国 伦敦 |  |
+| 2011-2012 赛季 | 切尔西 | 切尔西 1-1(点球4-3) 拜仁慕尼黑 | 安联球场 | 德国 慕尼黑 |  |
+| 2012-2013 赛季 | 拜仁慕尼黑 | 拜仁慕尼黑 2-1 多特蒙德 | 温布利球场 | 英国 伦敦 |  |
+| 2013-2014 赛季 | 皇家马德里 | 皇家马德里 4-1 马德里竞技 | 光明球场 | 葡萄牙 里斯本 |  |
+| 2014-2015 赛季 | 巴塞罗那 | 巴塞罗那 3-1 尤文图斯 | 柏林奥林匹克体育场 | 德国 柏林 |  |
+| 2015-2016 赛季 | 皇家马德里 | 皇家马德里 1-1(点球5-3) 马德里竞技 | 圣西罗球场/梅阿查球场 | 意大利 米兰 |  |
+| 2016-2017 赛季 | 皇家马德里 | 皇家马德里 4-1 尤文图斯 | 加迪夫千年球场 | 英国 加迪夫 |  |
+| 2017-2018 赛季 | 皇家马德里 | 皇家马德里 3-1 利物浦 | NSK奥林匹克体育场 | 乌克兰 基辅 |  |  |
 
 
 
