--- a/杂七杂八 Others/上海市历年平均工资.md
+++ b/杂七杂八 Others/上海市历年平均工资.md
@@ -1,31 +1,31 @@
 
 #### 上海市历年平均工资（1993至今）
 
-| 年份 | 年平均工资 | 月平均工资 | 月平均工资增长率 | 月最低工资标准 | 小时最低工资 | 社保缴费基数下限 | 社保缴费基数上限 |
-| :-----: | :-----: | :-----: | :-----: | :-----: | :-----: | :-----: | :-----: |
-| 1993 | 5652 | 471 |  |  |  |  |
-| 1994 | 7404 | 617 | 31.0% | 210 |  | 214 | 712 |
-| 1995 | 9276 | 773 | 25.3% | 220 |  | 283 | 934 |
-| 1996 | 10668 | 889 | 15.0% | 270 |  | 370 | 1234 |
-| 1997 | 11424 | 952 | 7.1% | 300 |  | 464 | 1546 |
-| 1998 | 12060 | 1005 | 5.6% | 315 |  | 533 | 1778 |
-| 1999 | 14148 | 1179 | 17.3% | 325 |  | 571 | 2856 |
-| 2000 | 15420 | 1285 | 9.0% | 370 |  | 603 | 3015 |
-| 2001 | 17764 | 1480 | 15.2% | 445 |  | 707 | 3537 |
-| 2002 | 19473 | 1623 | 9.6% | 490 |  | 771 | 3855 |
-| 2003 | 22160 | 1847 | 13.8% | 535 |  | 888 | 4440 |
-| 2004 | 24398 | 2033 | 10.1% | 570 |  | 974 | 4869 |
-| 2005 | 26823 | 2235 | 19.9% | 635 |  | 1108 | 5541 |
-| 2006 | 29569 | 2464 | 10.2% | 690 |  | 1220 | 6099 |
-| 2007 | 34707 | 2892 | 17.4% | 840 |  | 1479 | 7392 |
-| 2008 | 39502 | 3292 | 13.8% | 960 | 7.5 | 1735 | 8676 |
-| 2009 | 42789 | 3566 | 8.3% | 960 | 8 | 1975 | 9876 |
-| 2010 | 46757 | 3896 | 9.3% | 1120 | 9 | 2140 | 10698 |
-| 2011 | 51968 | 4331 | 11.1% | 1280 | 11 | 2338 | 11688 |
-| 2012 | 56300 | 4692 | 8.3% | 1450 | 12.5 | 2599 | 12993 |
-| 2013 | 60435 | 5036 | 7.3% | 1620 | 14 | 2815 | 14076 |
-| 2014 | 65417 | 5451 | 8.2% | 1820 | 15.5 | 3022 | 15110 |
-| 2015 | 71268 | 5939 | 8.9% | 2020  | 17 | 3563 | 17817 |
-| 2016 | 78048 | 6504 | 9.5% | 2190 | 18.5 | 3902 | 19512 |
-| 2017 | 85582 | 7132 | 9.7% | 2300 | 20 | 4279 | 21396 |
-| 2018 |  |  |  |  |  |  |  |
+| 年份 | 年平均工资 | 月平均工资 | 月最低工资标准 | 小时最低工资 | 社保缴费基数下限 | 社保缴费基数上限 |
+| :-----: | :-----: | :-----: | :-----: | :-----: | :-----: | :-----: |
+| 1993 | 5652 | 471 | 210 |  | 213.6 | 712 |
+| 1994 | 7404 | 617 | 220 |  | 282.6 | 934 |
+| 1995 | 9276 | 773 | 270 |  | 370 | 1234 |
+| 1996 | 10668 | 889 | 300 |  | 464 | 1546 |
+| 1997 | 11424 | 952 | 315 |  | 533 | 1778 |
+| 1998 | 12060 | 1005 | 325 |  | 571 | 2856 |
+| 1999 | 14148 | 1179 | 370 |  | 603 | 3015 |
+| 2000 | 15420 | 1285 | 445 |  | 707 | 3537 |
+| 2001 | 17764 | 1480 | 490 |  | 771 | 3855 |
+| 2002 | 19473 | 1623 | 535 |  | 888 | 4440 |
+| 2003 | 22160 | 1847 | 570 |  | 974 | 4869 |
+| 2004 | 24398 | 2033 | 635 |  | 1108 | 5541 |
+| 2005 | 26820 | 2235 | 690 |  | 1220 | 6099 |
+| 2006 | 29569 | 2464 | 750 |  | 1479 | 7392 |
+| 2007 | 34707 | 2892 | 840 |  | 1735 | 8676 |
+| 2008 | 39502 | 3292 | 960 | 7.5 | 1975 | 9876 |
+| 2009 | 42789 | 3566 | 1120 | 8 | 2140 | 10698 |
+| 2010 | 46757 | 3896 | 1280 | 9 | 2338 | 11688 |
+| 2011 | 51972 | 4331 | 1450 | 11 | 2599 | 12993 |
+| 2012 | 56300 | 4692 | 1620 | 12.5 | 2815 | 14076 |
+| 2013 | 60435 | 5036 | 1820 | 14 | 3022 | 15108 |
+| 2014 | 65417 | 5451 | 2020 | 15.5 | 3271 | 16353 |
+| 2015 | 71268 | 5939 | 2190 | 17 | 3563 | 17817 |
+| 2016 | 78048 | 6504 | 2300 | 19 | 3902 | 19512 |
+| 2017 | 85584 | 7132 | 2420 | 21 | 4279 | 21396 |
+| 2018 | 93984 | 7832 | 2480 | 22 | 4699 | 23496 |
